Setting up the scoreboard function for ShapeClicker